--- a/src/components/StaticPages/ContactUs.css
+++ b/src/components/StaticPages/ContactUs.css
@@ -4,7 +4,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	background-color: #f6f6f6;
+	background-color: black;
 	display: flex;
 	justify-content: center;
 	align-items: flex-start;
@@ -12,11 +12,11 @@
 
 .contact-us-header {
 	height: 153px;
-	background-color: rgb(0, 191, 255);
+	background-color: rgb(229, 9, 20);
 	text-align: center;
 	width: 100%;
 	padding-top: 50px;
-	margin-top: 70px;
+	margin-top: 0px;
 }
 
 .contact-us-title {
@@ -54,14 +54,14 @@
 	font-weight: 500;
 	font-size: 18px;
 	line-height: 20px;
-	color: rgb(0, 191, 255);
+	color: rgb(229, 9, 20);
 	background-color: #fff;
 	border-radius: 5px;
 }
 
 .contact-us-form > input {
 	height: 42px;
-	border: solid 1px rgb(0, 191, 255);
+	border: solid 1px rgb(229, 9, 20);
 	border-radius: 3px;
 	padding-left: 7px;
 	font-family: Roboto;
@@ -78,7 +78,7 @@
 }
 
 .contact-us-form > textarea {
-	border: solid 1px rgb(0, 191, 255);
+	border: solid 1px rgb(229, 9, 20);
 	border-radius: 3px;
 	height: 112px;
 	border-radius: 3px;
@@ -98,7 +98,7 @@
 }
 
 .contact-us-form > select {
-	border: solid 1px rgb(0, 191, 255);
+	border: solid 1px rgb(229, 9, 20);
 	border-radius: 3px;
 	height: 42px;
 	font-family: Roboto;
@@ -109,7 +109,7 @@
 }
 
 .btn-contact-us-page-form-submit {
-	background: #f49131;
+	background: rgb(229, 9, 20);
 	border-radius: 5px;
 	border: none;
 	color: white;
@@ -125,7 +125,7 @@
 	justify-content: flex-start;
 	align-items: center;
 	flex: 4;
-	background-color: rgb(0, 191, 255);
+	background-color: rgb(229, 9, 20);
 	margin-top: 50px;
 	margin-bottom: 70px;
 	margin-right: 60px;
