--- a/src/components/StaticPages/Policies.css
+++ b/src/components/StaticPages/Policies.css
@@ -1,10 +1,13 @@
+.policies {
+	background-color: black;
+}
 .policies-header {
 	height: 153px;
-	background-color: rgb(0, 191, 255);
+	background-color: rgb(229,9,20);
 	text-align: center;
 	width: 100%;
 	padding-top: 50px;
-	margin-top: 70px;
+	margin-top: 0px;
 }
 
 .policies-title {
@@ -20,6 +23,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
+	
 }
 
 .policies-content-title {
@@ -32,7 +36,7 @@
 	font-family: Roboto;
 	font-style: normal;
 	line-height: 50px;
-	color: #000000;
+	color: white;
 	font-size: 28px;
 }
 
@@ -45,7 +49,7 @@
 	font-family: Roboto;
 	font-style: normal;
 	line-height: 50px;
-	color: #000000;
+	color: white;
 	font-size: 24px;
 }
 
@@ -58,8 +62,11 @@
 	font-family: Roboto;
 	font-style: normal;
 	line-height: 1.7;
-	color: #000000;
+	color: white;
 	font-size: 20px;
+}
+.btn-search-compare{
+	background-color: rgb(229,9,20);
 }
 
 @media (max-width: 1366px) {
