--- a/src/components/StaticPages/Terms.css
+++ b/src/components/StaticPages/Terms.css
@@ -1,10 +1,11 @@
+
 .terms-header {
 	height: 153px;
-	background-color: rgb(0, 191, 255);
+	background-color: rgb(229, 9, 20);
 	text-align: center;
 	width: 100%;
 	padding-top: 50px;
-	margin-top: 70px;
+	margin-top: 0px;
 	margin-bottom: 78px;
 }
 
@@ -22,6 +23,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
+	background-color: black;
 }
 
 .terms-content-subtitle {
@@ -35,7 +37,7 @@
 	font-weight: normal;
 	font-size: 28px;
 	line-height: 30px;
-	color: #000000;
+	color: rgb(229,9,20);
 	line-height: 1.5;
 }
 
@@ -47,6 +49,10 @@
 	line-height: 1.7;
 	font-family: Roboto;
 	font-size: 20px;
+	color: white;
+}
+.btn-search-compare{
+	background-color: rgb(229,9,20);
 }
 
 @media (max-width: 1024px) {
