--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,7 +8,7 @@
 	align-items: center;
 	width: 100%;
 	height: auto;
-	background-color: rgb(0, 0, 0);
+	background-color: #212529;
 	font-size: 36px;
 	padding: 30px;
 	
