--- a/src/components/StaticPages/Terms.css
+++ b/src/components/StaticPages/Terms.css
@@ -23,7 +23,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	background-color: black;
+	background-color: #212529;
 }
 
 .terms-content-subtitle {
